--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </section>
 
   <script src="https://media.twiliocdn.com/sdk/js/chat/v1.0/twilio-chat.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
