--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input id="chat-input" type="text" placeholder="say anything" autofocus/>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://media.twiliocdn.com/sdk/js/chat/v1.0/twilio-chat.js"></script>
+  <script src="https://media.twiliocdn.com/sdk/js/chat/releases/1.2.1/twilio-chat.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
